--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,25 @@
 {% load static i18n %}
+{% get_current_language_bidi as LANGUAGE_BIDI %}
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!DOCTYPE html>
-<html>
+{% if LANGUAGE_BIDI %}
+<html dir="rtl">
+{% else %}
+<html dir="ltr">
+{% endif %}
+
 <head>
 	<title>
 
@@ -23,14 +41,63 @@
 	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.theme.default.min.css'%} ">
 	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.theme.default.css'%} ">
 
+
+
+
+
+
+	{% if LANGUAGE_BIDI %}
+
+	<link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css" integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
+
+	{% else %}
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	{% endif %}
+
+
+
+
+
+
 
 	<script src="{% static 'js/owlcarousel/jquery.min.js' %}"></script>
 	<script src="{% static 'js/owlcarousel/owl.carousel.min.js' %}"></script>
 </head>
 <body>
 	
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light ">
 		<a class="navbar-brand" href="{% url 'index' %}">Auctions</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -38,14 +105,186 @@
 
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
-		<ul class="navbar-nav  mt-2 mt-lg-0 mr-auto">
+
+
+			<ul class="navbar-nav  mt-lg-0  
+			{% if LANGUAGE_BIDI %}
+			ml-10
+			{% else %}
+			mr-10
+			{% endif %}">
+
+
+				{% get_current_language as LANGUAGE_CODE %}
+	
+				{% get_available_languages as LANGUAGES %}
+				{% get_language_info_list for LANGUAGES as languages %}
+	
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  {{LANGUAGE_CODE}}
+					  
+					</a>
+					<div class="dropdown-menu"   
+					 aria-labelledby="navbarDropdown">
+	
+	
+	
+	
+	
+	
+						{% for language in languages %}
+	
+	
+	
+						<form class="form-inline" action="{% url 'set_language' %}" method="post">
+							{% csrf_token %}
+			
+							<input name="next" type="hidden" value="{{ redirect_to }}">
+			
+	
+							<select class="form-control form-control-sm mr-2" name="language" id="" hidden>		
+								<option class="dropdown-item" value="{{ language.code }}" >
+									
+								</option>	
+							</select>	
+							<button type="submit" class="non_border dropdown-item">{{language.name_local}}</button>
+								
+			
+			
+							
+						</form>
+			
+						
+	
+						{% endfor %}
+					</div>
+				  </li>
+	
+	
+	
+	
+	
+		
+	
+	
+	
+	
+	
+	
+	<!-- 
+	
+	
+				<form class="form-inline" action="{% url 'set_language' %}" method="post">
+					{% csrf_token %}
+	
+					<input name="next" type="hidden" value="{{ redirect_to }}">
+					<select class="form-control form-control-sm mr-2" name="language" id="">
+	
+						{% get_current_language as LANGUAGE_CODE %}
+	
+						{% get_available_languages as LANGUAGES %}
+						{% get_language_info_list for LANGUAGES as languages %}
+	
+						{% for language in languages %}
+	
+							<option class="dropdown-item" value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+								{{language.name_local}} ({{language.code}})
+							</option>
+	
+						{% endfor %}
+	
+					</select>
+					<button type="submit" class="btn btn-primary btn-sm">{% trans 'Change' %}</button>
+				</form> -->
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+			</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<ul class="navbar-nav mr-auto mt-lg-0 ">
+
+			<li class="nav-item mr-3">
+				
+				<a class="nav-link" href="{% url 'create_auction' %}">Company</a>
+			</li>
+
+
+
+			<li class="nav-item mr-3">
+				
+				<a class="nav-link" href="{% url 'create_auction' %}">FAQ</a>
+			</li>
+
+
+			<li class="nav-item mr-3">
+				
+				<a class="nav-link" href="{% url 'create_auction' %}">Contact us</a>
+			</li>
+
+
+		</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		
+		<ul class="navbar-nav mt-lg-0">
 			{% if user.is_authenticated %}
 				{% for i in groups_user_sellers %}
 
 					{% if i.id == user.id%}
 					
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'create_auction' %}">Create Auction<span class="sr-only">(current)</span></a>
+						<li class="nav-item mr-5  c-bg-dark c-btn  ">
+							<a class="nav-link text-light" href="{% url 'create_auction' %}">Create Auction<span class="sr-only">(current)</span></a>
 						</li>
 
 					
@@ -53,13 +292,17 @@
 				{% endfor %}
 			{% endif %}
 
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<li class="nav-item dropdown ">
+				<a class="nav-link dropdown-toggle c-color-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					{% if user.is_authenticated %} {{ user.username }} {% else %} Sign in {% endif %}
 				</a>
 
 
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<div class="dropdown-menu " {% if LANGUAGE_BIDI %}
+				style="left: 0px;"
+				{% else %}
+				style="left: -30px;"
+				{% endif %} aria-labelledby="navbarDropdown">
 
 				
 				{% if user.is_authenticated  %}
@@ -96,43 +339,9 @@
 
 
 
-			</ul>
+		</ul>
 
 
-
-
-
-
-
-
-
-					
-
-
-
-
-			<form class="form-inline" action="{% url 'set_language' %}" method="post">
-				{% csrf_token %}
-
-				<input name="next" type="hidden" value="{{ redirect_to }}">
-				<select class="form-control form-control-sm mr-2" name="language" id="">
-
-					{% get_current_language as LANGUAGE_CODE %}
-
-					{% get_available_languages as LANGUAGES %}
-					{% get_language_info_list for LANGUAGES as languages %}
-					{% for language in languages %}
-
-					<option class="dropdown-item" value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
-
-							{{language.name_local}} ({{language.code}})
-						</option>
-
-					{% endfor %}
-
-				</select>
-				<button type="submit" class="btn btn-primary btn-sm">{% trans 'Change' %}</button>
-			</form>
 
 
 
@@ -151,7 +360,71 @@
 	</nav>
 
 
-<div class="container">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container-xl">
 	<div class="row">
 		<h1>
 
@@ -169,6 +442,24 @@
 		{% endblock %}
 	</div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <script
