--- a/templates/base.html
+++ b/templates/base.html
@@ -423,6 +423,13 @@
 
 
 
+	<div class="container-fluid">
+		<div>
+			{% block slider %}
+
+			{% endblock %}
+		</div>
+	</div>
 
 <div class="container-xl">
 	<div class="row">
