--- a/templates/base.html
+++ b/templates/base.html
@@ -243,7 +243,7 @@
 
 			<li class="nav-item mr-3">
 				
-				<a class="nav-link" href="{% url 'create_auction' %}">Company</a>
+				<a class="nav-link" href="{% url 'company_page' %}">Company</a>
 			</li>
 
 
